# Claw-Harness

./: .gitignore  CLAW.md  Cargo.toml  Dockerfile  Dockerfile.node  README.md  docker-compose.yml
.github/workflows/: ci.yml
.qwen/: settings.json  settings.json.orig
crates/api/src/providers/: openai_compat.rs
crates/api/tests/: openai_compat_integration.rs  provider_client_integration.rs
crates/claw-cli/src/: input.rs  main.rs
crates/commands/src/: lib.rs
crates/distributed-runtime/: Cargo.toml
crates/distributed-runtime/src/: lib.rs  models.rs  queue.rs  state.rs
crates/grpc-api/: Cargo.toml  build.rs
crates/grpc-api/proto/: claw.proto
crates/grpc-api/src/: lib.rs  server.rs  service.rs
crates/lsp/src/: client.rs  lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs  prometheus_metrics.rs  tracing_setup.rs
crates/plugins/src/: hooks.rs
crates/runtime/src/: hooks.rs  mcp_stdio.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  wasi_executor.rs
crates/server/src/: lib.rs
crates/tool-store/: Cargo.toml
crates/tool-store/src/: commands.rs  lib.rs  package.rs  registry.rs
crates/tools/src/: lib.rs
docs/: BILLING_SYSTEM.md  DISTRIBUTED_ARCHITECTURE.md  INTEGRATION_TESTS.md  PERFORMANCE_BENCHMARKS.md  POLICY_ENGINE.md  RUST_FIRST_MIGRATION.md  RUST_FIRST_ROADMAP.md  SECURITY_AUDIT.md
k8s/: README.md
k8s/base/: cluster-setup.yaml
k8s/claw/: statefulset.yaml
k8s/helm/claw-harness/: README.md
monitoring/: prometheus.yml
python/: README.md  pyproject.toml
python/claw_harness/: __init__.py  client.py  config.py  models.py
