[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "claw-harness"
version = "0.2.0"
description = "Claw-Harness Python SDK - Distributed AI Agent Orchestration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["ai", "llm", "agent", "harness", "distributed"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
async = ["anyio>=4.0.0"]
grpc = ["grpcio>=1.60.0", "grpcio-tools>=1.60.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/vohoang1/Claw-Harness"
Documentation = "https://github.com/vohoang1/Claw-Harness/blob/main/python/README.md"
Repository = "https://github.com/vohoang1/Claw-Harness.git"
Issues = "https://github.com/vohoang1/Claw-Harness/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "claw_harness._claw_harness"
