[package]
name = "metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
prometheus.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
lazy_static.workspace = true
tokio.workspace = true

[lints]
workspace = true
