[package]
name = "sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
tracing.workspace = true

[lints]
workspace = true
