[package]
name = "tool-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "claw-tool"
path = "src/bin/claw-tool.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
sha2 = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sandbox = { path = "../sandbox" }

[lints]
workspace = true
